welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:12: error: too many arguments for method gauche: ()Unit
	gauche(2)
              ^